<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/shape6"
        android:orientation="vertical">

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:orientation="horizontal">-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1.2"-->
        <!--                android:text="@string/txt_service_url"-->
        <!--                android:textSize="14dp" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/text_service_url"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="3"-->
        <!--                android:singleLine="true"-->
        <!--                android:text="@string/txt_service_url_default"-->
        <!--                android:textSize="14dp" />-->
        <!--        </LinearLayout>-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:orientation="horizontal">-->

        <!--            <TextView-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1.2"-->
        <!--                android:text="@string/txt_user_name"-->
        <!--                android:textSize="14dp" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/text_user_name"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="3"-->
        <!--                android:singleLine="true"-->
        <!--                android:text="@string/user_name_default"-->
        <!--                android:textSize="14dp" />-->
        <!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_user_required_level"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/sp_user_required_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_authenticator_attachment_mode"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/sp_auth_attach_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_need_residentkey_or_not"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/sp_residentkey_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_attestation_conveyance_preference"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/sp_attest_conveyance_preference"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_net_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_round_corner_normal"
            android:text="@string/btn_net_test_register"
            android:textAllCaps="false"
            android:onClick="onClickRegistration" />

        <Button
            android:id="@+id/btn_net_auth"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_round_corner_normal"
            android:text="@string/btn_net_test_authenticate"
            android:textAllCaps="false"
            android:onClick="onClickAuthentication" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_net_get_register_info"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_round_corner_normal"
            android:text="@string/btn_net_get_register_info"
            android:textAllCaps="false"
            android:onClick="onClickGetRegInfo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_net_deregister_all"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_round_corner_normal"
            android:text="@string/btn_net_deregister_all"
            android:textAllCaps="false"
            android:onClick="onClickDeregistration" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/backgroud_green_light2">

        <TextView
            android:id="@+id/txt_show_log_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </ScrollView>

</LinearLayout>
